# RCPS-Valuation-Tool

./: .gitignore  README.md  _setup_services.ps1  _update_wat_service.ps1  render.yaml
BC_CONFIRMATION_TOOL/: .gitignore  README.md  _restart_server.ps1  pyproject.toml  run_server.py
BC_CONFIRMATION_TOOL/api/: app.py
BC_CONFIRMATION_TOOL/api/routes/: crosscheck.py  projects.py  response.py  sampling.py  workpaper.py
BC_CONFIRMATION_TOOL/configs/: bank_aliases.yaml  domestic_locations.yaml  financial_keywords.yaml  foreign_cities.yaml  form_profiles.yaml
BC_CONFIRMATION_TOOL/frontend/: app.js  index.html  style.css
BC_CONFIRMATION_TOOL/src/application/: crosscheck_uc.py  export_4150_uc.py  parse_response_uc.py  sampling_uc.py
BC_CONFIRMATION_TOOL/src/domain/: ac_models.py  crosscheck.py  financial_account.py  party_normalize.py  record_dedup.py  sampling.py
BC_CONFIRMATION_TOOL/src/infrastructure/: address_validator.py  cs_loader.py  gl_loader.py  union_monthly.py
BC_CONFIRMATION_TOOL/templates/: 4150_AC_template.xlsx
BC_CONFIRMATION_TOOL/tests/e2e/: test_full_pipeline.py
BC_CONFIRMATION_TOOL/tests/fixtures/: mini_gl.xlsx
BC_CONFIRMATION_TOOL/tests/integration/: test_crosscheck_route.py  test_healthz.py  test_real_replies_smoke.py  test_remove_counterparty.py  test_response_route.py  test_sampling_route.py  test_template_preservation.py  test_workpaper_route.py
BC_CONFIRMATION_TOOL/tests/unit/: test_ac1_amounts_real.py  test_ac1_detail_block.py  test_ac1_detail_bond_real.py  test_ac1_ibk_real.py  (+59 more)
BC_CONFIRMATION_TOOL/tools/: compare_to_reference.py
(+393 files in other folders)
