[project]
name = "bc-confirmation-tool"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "openpyxl>=3.1",
    "pdfplumber>=0.10",
    "Pillow>=10.0",
    "PyMuPDF>=1.24",
    "rapidocr-onnxruntime>=1.3",
    "rapidfuzz>=3.6",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "sqlmodel>=0.0.16",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: 느린 테스트 (OCR 등). `-m 'not slow'` 로 제외 가능",
]
